--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>br.com.ingenieux.jenkins.plugins</groupId>
     <artifactId>awseb-deployment-plugin</artifactId>
-    <version>0.3.8</version>
+    <version>0.3.8_SYS-482</version>
     <packaging>hpi</packaging>
 
     <name>AWS Elastic Beanstalk Deployment Plugin</name>
